# procctrl

./: .gitignore  Makefile.am  README.md  build.bat  configure.ac  doxygen.cfg  pom.xml  procctrl.sln  procctrl.vcxproj  procctrl.vcxproj.filters  test.vcxproj  test.vcxproj.filters
man/: Makefile  Makefile.am  procctrl.man
src/: .gitignore  Makefile.am  example-child-script.bat  example-child-script.sh  getopt_win.c  getopt_win.h  kill.c  kill.h  main.c  operations.h  params.c  params.h  parent.c  parent.h  process.c  process.h  query.c  start.c  stop.c  test_kill.c  test_params.c  test_process.c  test_query.c  test_start.c  test_stop.c  test_units.c  test_units.h  test_verbose.h  test_watchdog.c  watchdog.c  watchdog.h
