bin_PROGRAMS = procctrl
procctrl_SOURCES =	kill.c \
			main.c \
			params.c \
			process.c \
			query.c \
			start.c \
			stop.c \
			watchdog.c
check_PROGRAMS = testall
testall_SOURCES =	kill.c test_kill.c \
			params.c test_params.c \
			process.c test_process.c \
			query.c test_query.c \
			start.c test_start.c \
			stop.c test_stop.c \
			watchdog.c test_watchdog.c
